feat: sync monitor accounts to allocation
